hero-banner,about-section

--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar">
-    <div class="container">
-      <ul class="nav-list">
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#projects">Portfolio</a></li>
-        <li><a href="#contact">Contact Me</a></li>
-      </ul>
-    </div>
-  </nav>
+
+
+  
+
+<nav class="navbar">
+  <div class="logo">
+    <img src="asssets/logo.png" alt="Logo" class="logo-img">
+  </div>
+
+  <div class="menu-toggle" id="menu-toggle">
+    &#9776; <!-- Unicode hamburger icon -->
+  </div>
+
+  <ul class="nav-list" id="nav-list">
+    <li><a href="#about">About</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#projects">Portfolio</a></li>
+    <li><a href="#contact">Contact Me</a></li>
+  </ul>
+</nav>
+
 
   <header class="hero">
     <div class="container">
@@ -25,12 +36,40 @@
     </div>
   </header>
 
-  <section id="about" class="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>I craft thoughtful user experiences and clean digital interfaces that leave a lasting impression.</p>
-    </div>
-  </section>
+  <section class="about" id="about">
+  <div class="container">
+    <h2>About Me</h2>
+    <p>
+      Hi, I’m <strong>Talla Vivek</strong>, a passionate <strong>Civil Engineer</strong> and <strong>Freelance Designer</strong> based in Hyderabad. I have worked on over <strong>10 projects</strong> in and around the city, collaborating closely with <strong>SPACEUIX</strong> to bring innovative architectural and structural designs to life.
+    </p>
+    <p>
+      With a keen eye for detail and a user-focused design approach, I specialize in transforming floor plans and elevations into functional, aesthetic spaces that elevate the end-user experience. Whether it's residential, commercial, or custom design work, I aim to deliver quality and creativity in every project.
+    </p>
+    <p>
+      Let’s build something exceptional together.
+    </p>
+    <h3>floor vista</h3>
+    <p>Our company specializes in providing
+ top-notch architectural design
+ services tailored to residential projects.
+ We offer Vastu-compliant floor plans,
+ structural drawings, and elevation
+ designs, ensuring each design is
+ creative, functional, and aesthetically
+ pleasing.
+ As a growing firm, we are dedicated to
+ delivering high-quality results with
+ meticulous attention to detail and a
+ commitment to innovation. Our designs
+ are crafted to meet the unique needs
+ of our clients while adhering to industry
+ standards and best practices.</p>
+  </div>
+</section>
+
+
+  
+    
 
   <section id="services" class="services">
     <div class="container">
@@ -63,6 +102,8 @@
     </div>
   </footer>
 
+  
   <script src="script.js"></script>
+
 </body>
 </html>
