--- a/index.html
+++ b/index.html
@@ -68,37 +68,62 @@
 </section>
 
 
+   <section class="projects">
+    <h2>My Projects</h2>
+    <div class="project-grid">
+      <div class="project-card">
+        <img src="asssets/demo_project.jpg" alt="Project 1">
+        <div class="info">
+          <h3>Project One</h3>
+          <p>A brief description of the first project goes here.</p>
+        </div>
+      </div>
+      <div class="project-card">
+        <img src="asssets/demo_project.jpg" alt="Project 2">
+        <div class="info">
+          <h3>Project Two</h3>
+          <p>This is a description of the second project.</p>
+        </div>
+      </div>
+      <div class="project-card">
+        <img src="asssets/demo_project.jpg" alt="Project 3">
+        <div class="info">
+          <h3>Project Three</h3>
+          <p>Details about the third project are shown here.</p>
+        </div>
+      </div>
+      <div class="project-card">
+        <img src="asssets/demo_project.jpg" alt="Project 3">
+        <div class="info">
+          <h3>Project four</h3>
+          <p>Details about the third project are shown here.</p>
+        </div>
+      </div>
   
-    
 
-  <section id="services" class="services">
-    <div class="container">
-      <h2>Services</h2>
-      <p>UI/UX Design, Branding, Web Design & Development, Consulting</p>
-    </div>
-  </section>
+      <div class="project-card">
+        <img src="asssets/demo_project.jpg" alt="Project 3">
+        <div class="info">
+          <h3>Project four</h3>
+          <p>Details about the third project are shown here.</p>
+        </div>
+      </div>
+  
 
-  <section id="projects" class="projects">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="project-list">
-        <div class="project-item">Halo Agency Website</div>
-        <div class="project-item">Digital Concepts Studio</div>
-        <div class="project-item">Brand Identity Showcase</div>
+        <div class="project-card">
+        <img src="asssets/demo_project.jpg" alt="Project 3">
+        <div class="info">
+          <h3>Project four</h3>
+          <p>Details about the third project are shown here.</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <section id="contact" class="contact">
-    <div class="container">
-      <h2>Get In Touch</h2>
-      <p>Reach out: <a href="mailto:hello@dnova.com">hello@dnova.com</a></p>
-    </div>
-  </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Your Name</p>
+      <p>&copy; 2025 rsvn</p>
     </div>
   </footer>
 
