prject,contact section,abou

--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
     <h2>My Projects</h2>
     <div class="project-grid">
       <div class="project-card">
-        <img src="asssets/demo_project.jpg" alt="Project 1">
+        <img src="asssets/projects/project_001.jpg" alt="Project 1">
         <div class="info">
           <h3>Project One</h3>
           <p>A brief description of the first project goes here.</p>
         </div>
       </div>
       <div class="project-card">
-        <img src="asssets/demo_project.jpg" alt="Project 2">
+        <img src="asssets/projects/project_008.jpg" alt="Project 2">
         <div class="info">
           <h3>Project Two</h3>
           <p>This is a description of the second project.</p>
         </div>
       </div>
       <div class="project-card">
-        <img src="asssets/demo_project.jpg" alt="Project 3">
+        <img src="asssets/projects/project_003.jpg" alt="Project 3">
         <div class="info">
           <h3>Project Three</h3>
           <p>Details about the third project are shown here.</p>
         </div>
       </div>
       <div class="project-card">
-        <img src="asssets/demo_project.jpg" alt="Project 3">
+        <img src="asssets/projects/project_004.jpg" alt="Project 3">
         <div class="info">
           <h3>Project four</h3>
           <p>Details about the third project are shown here.</p>
@@ -102,7 +102,7 @@
   
 
       <div class="project-card">
-        <img src="asssets/demo_project.jpg" alt="Project 3">
+        <img src="asssets/projects/project_005.jpg" alt="Project 3">
         <div class="info">
           <h3>Project four</h3>
           <p>Details about the third project are shown here.</p>
@@ -111,7 +111,30 @@
   
 
         <div class="project-card">
-        <img src="asssets/demo_project.jpg" alt="Project 3">
+        <img src="asssets/projects/project_006.jpg" alt="Project 3">
+        <div class="info">
+          <h3>Project four</h3>
+          <p>Details about the third project are shown here.</p>
+        </div>
+      </div>
+
+         <div class="project-card">
+        <img src="asssets/projects/project_007.jpg" alt="Project 3">
+        <div class="info">
+          <h3>Project four</h3>
+          <p>Details about the third project are shown here.</p>
+        </div>
+      </div>
+
+       <div class="project-card">
+        <img src="asssets/projects/project_007.jpg" alt="Project 3">
+        <div class="info">
+              <h3>Project four</h3>
+          <p>Details about the third project are shown here.</p>
+        </div>
+      </div>
+         <div class="project-card">
+        <img src="asssets/projects/project_002.jpg" alt="Project 3">
         <div class="info">
           <h3>Project four</h3>
           <p>Details about the third project are shown here.</p>
@@ -121,10 +144,52 @@
   </section>
 
 
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 rsvn</p>
+
+    <section class="contact-section">
+    <h2>Contact us</h2>
+    <div class="contact-grid">
+      <div class="contact-item">
+        <i class="fas fa-phone"></i>
+        <div>
+          <h4>Phone</h4>
+          <p>+91 8341208733</p>
+        </div>
+      </div>
+      <div class="contact-item">
+        <i class="fas fa-map-marker-alt"></i>
+        <div>
+          <h4>Address</h4>
+          <p>Mancherial, Telangana, 504208</p>
+        </div>
+      </div>
+      <div class="contact-item">
+        <i class="fas fa-envelope"></i>
+        <div>
+          <h4>Email</h4>
+          <p>floorvista.aec@gmail.com</p>
+        </div>
+      </div>
+      <div class="contact-item">
+        <i class="fas fa-globe"></i>
+        <div>
+          <h4>Website</h4>
+          <p>floorvista.homes</p>
+        </div>
+      </div>
     </div>
+  </section>
+
+
+  <footer>
+  
+    <div class="container">
+  <p>
+    <a href="https://risvn.github.io/risvn/" target="_blank" rel="noopener noreferrer">
+      &copy; 2025 rsvn
+    </a>
+  </p>
+</div>
+
   </footer>
 
   
