--- a/index.html
+++ b/index.html
@@ -40,15 +40,12 @@
   <div class="container">
     <h2>About Me</h2>
     <p>
-      Hi, I’m <strong>Talla Vivek</strong>, a passionate <strong>Civil Engineer</strong> and <strong>Freelance Designer</strong> based in Hyderabad. I have worked on over <strong>10 projects</strong> in and around the city, collaborating closely with <strong>SPACEUIX</strong> to bring innovative architectural and structural designs to life.
-    </p>
-    <p>
-      With a keen eye for detail and a user-focused design approach, I specialize in transforming floor plans and elevations into functional, aesthetic spaces that elevate the end-user experience. Whether it's residential, commercial, or custom design work, I aim to deliver quality and creativity in every project.
+      Hi, I’m <strong>Talla Vivek</strong>, a passionate <strong>Civil Engineer</strong> and <strong>Freelance Designer</strong> based in Hyderabad.      With a keen eye for detail and a user-focused design approach, I specialize in transforming floor plans and elevations into functional, aesthetic spaces that elevate the end-user experience. Whether it's residential, commercial, or custom design work, I aim to deliver quality and creativity in every project.
     </p>
     <p>
       Let’s build something exceptional together.
     </p>
-    <h3>floor vista</h3>
+    <h3>FLOOR VISTA</h3>
     <p>Our company specializes in providing
  top-notch architectural design
  services tailored to residential projects.
@@ -68,7 +65,29 @@
 </section>
 
 
-   <section class="projects">
+  <section class="services" id="services">
+    <div class="container">
+      <h2>Services</h2>
+      <div class="service-grid">
+        <div class="service-card">
+          <h3>Building Planning</h3>
+          <p>We create Vastu-compliant, space-efficient building plans tailored to your specific requirements and site conditions.</p>
+        </div>
+        <div class="service-card">
+          <h3>Elevation Design</h3>
+          <p>Our creative elevation designs enhance your building’s appearance with a focus on aesthetics, proportion, and client preferences.</p>
+        </div>
+        <div class="service-card">
+          <h3>Structural Detailing</h3>
+          <p>We provide precise structural drawings and reinforcements that ensure safety, durability, and compliance with engineering standards.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+   <section class="projects" id="projects">
     <h2>My Projects</h2>
     <div class="project-grid">
       <div class="project-card">
@@ -145,7 +164,7 @@
 
 
 
-    <section class="contact-section">
+    <section class="contact-section" id="contact">
     <h2>Contact us</h2>
     <div class="contact-grid">
       <div class="contact-item">
@@ -194,6 +213,7 @@
 
   
   <script src="script.js"></script>
+
 
 </body>
 </html>
