--- a/index.html
+++ b/index.html
@@ -1,83 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Minimal Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- AOS (Animate On Scroll) Styles -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 <body>
 
-
-  
-
-<nav class="navbar">
-  <div class="logo">
-    <img src="asssets/logo.png" alt="Logo" class="logo-img">
-  </div>
-
-  <div class="menu-toggle" id="menu-toggle">
-    &#9776; <!-- Unicode hamburger icon -->
-  </div>
-
-  <ul class="nav-list" id="nav-list">
-    <li><a href="#about">About</a></li>
-    <li><a href="#services">Services</a></li>
-    <li><a href="#projects">Portfolio</a></li>
-    <li><a href="#contact">Contact Me</a></li>
-  </ul>
-</nav>
-
+  <nav class="navbar" data-aos="fade-down">
+    <div class="logo">
+      <img src="asssets/logo.png" alt="Logo" class="logo-img" />
+    </div>
+    <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+    <ul class="nav-list" id="nav-list">
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#projects">Portfolio</a></li>
+      <li><a href="#contact">Contact Me</a></li>
+    </ul>
+  </nav>
 
   <header class="hero">
-    <div class="container">
+    <div class="container" data-aos="fade-up">
       <h1>Hello</h1>
-      <p>--It's vivek architectural designer.</p>
+      <p>--It's Vivek, architectural designer.</p>
     </div>
   </header>
 
-  <section class="about" id="about">
-  <div class="container">
-    <h2>About Me</h2>
-    <p>
-      Hi, I’m <strong>Talla Vivek</strong>, a passionate <strong>Civil Engineer</strong> and <strong>Freelance Designer</strong> based in Hyderabad.      With a keen eye for detail and a user-focused design approach, I specialize in transforming floor plans and elevations into functional, aesthetic spaces that elevate the end-user experience. Whether it's residential, commercial, or custom design work, I aim to deliver quality and creativity in every project.
-    </p>
-    <p>
-      Let’s build something exceptional together.
-    </p>
-    <h3>FLOOR VISTA</h3>
-    <p>Our company specializes in providing
- top-notch architectural design
- services tailored to residential projects.
- We offer Vastu-compliant floor plans,
- structural drawings, and elevation
- designs, ensuring each design is
- creative, functional, and aesthetically
- pleasing.
- As a growing firm, we are dedicated to
- delivering high-quality results with
- meticulous attention to detail and a
- commitment to innovation. Our designs
- are crafted to meet the unique needs
- of our clients while adhering to industry
- standards and best practices.</p>
-  </div>
-</section>
+  <section class="about" id="about" data-aos="fade-up">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>
+        Hi, I’m <strong>Talla Vivek</strong>, a passionate <strong>Civil Engineer</strong> and <strong>Freelance Designer</strong> based in Hyderabad. I specialize in transforming floor plans and elevations into functional, aesthetic spaces that elevate the end-user experience.
+      </p>
+      <p>Let’s build something exceptional together.</p>
+      <h3>FLOOR VISTA</h3>
+      <p>
+        Our company specializes in providing top-notch architectural design services tailored to residential projects. We offer Vastu-compliant floor plans, structural drawings, and elevation designs, ensuring each design is creative, functional, and aesthetically pleasing.
+        We are dedicated to delivering high-quality results with meticulous attention to detail and innovation.
+      </p>
+    </div>
+  </section>
 
-
-  <section class="services" id="services">
+  <section class="services" id="services" data-aos="fade-up">
     <div class="container">
       <h2>Services</h2>
       <div class="service-grid">
-        <div class="service-card">
+        <div class="service-card" data-aos="zoom-in" data-aos-delay="100">
           <h3>Building Planning</h3>
           <p>We create Vastu-compliant, space-efficient building plans tailored to your specific requirements and site conditions.</p>
         </div>
-        <div class="service-card">
+        <div class="service-card" data-aos="zoom-in" data-aos-delay="200">
           <h3>Elevation Design</h3>
           <p>Our creative elevation designs enhance your building’s appearance with a focus on aesthetics, proportion, and client preferences.</p>
         </div>
-        <div class="service-card">
+        <div class="service-card" data-aos="zoom-in" data-aos-delay="300">
           <h3>Structural Detailing</h3>
           <p>We provide precise structural drawings and reinforcements that ensure safety, durability, and compliance with engineering standards.</p>
         </div>
@@ -85,15 +66,13 @@
     </div>
   </section>
 
-
-
-   <section class="projects" id="projects">
+  <section class="projects" id="projects" data-aos="fade-up">
     <h2>My Projects</h2>
     <div class="project-grid">
-      <div class="project-card">
-        <img src="asssets/projects/project_001.jpg" alt="Project 1">
+      <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+        <img src="asssets/projects/project_001.jpg" alt="Project 1" />
         <div class="info">
-          <h3>Project One</h3>
+             <h3>Project One</h3>
           <p>A brief description of the first project goes here.</p>
         </div>
       </div>
@@ -164,31 +143,37 @@
 
 
 
-    <section class="contact-section" id="contact">
-    <h2>Contact us</h2>
+
+
+
+
+
+
+  <section class="contact-section" id="contact" data-aos="fade-up">
+    <h2>Contact Us</h2>
     <div class="contact-grid">
-      <div class="contact-item">
+      <div class="contact-item" data-aos="fade-right">
         <i class="fas fa-phone"></i>
         <div>
           <h4>Phone</h4>
           <p>+91 8341208733</p>
         </div>
       </div>
-      <div class="contact-item">
+      <div class="contact-item" data-aos="fade-right" data-aos-delay="100">
         <i class="fas fa-map-marker-alt"></i>
         <div>
           <h4>Address</h4>
           <p>Mancherial, Telangana, 504208</p>
         </div>
       </div>
-      <div class="contact-item">
+      <div class="contact-item" data-aos="fade-right" data-aos-delay="200">
         <i class="fas fa-envelope"></i>
         <div>
           <h4>Email</h4>
           <p>floorvista.aec@gmail.com</p>
         </div>
       </div>
-      <div class="contact-item">
+      <div class="contact-item" data-aos="fade-right" data-aos-delay="300">
         <i class="fas fa-globe"></i>
         <div>
           <h4>Website</h4>
@@ -198,22 +183,27 @@
     </div>
   </section>
 
-
-  <footer>
-  
+  <footer data-aos="fade-up">
     <div class="container">
-  <p>
-    <a href="https://risvn.github.io/risvn/" target="_blank" rel="noopener noreferrer">
-      &copy; 2025 rsvn
-    </a>
-  </p>
-</div>
-
+      <p>
+        <a href="https://risvn.github.io/risvn/" target="_blank" rel="noopener noreferrer">
+          &copy; 2025 rsvn
+        </a>
+      </p>
+    </div>
   </footer>
 
-  
+  <!-- AOS JS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1000,
+      once: true
+    });
+  </script>
+
+  <!-- Your JS -->
   <script src="script.js"></script>
-
-
 </body>
 </html>
+
