--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ul class="nav-list" id="nav-list">
       <li><a href="#about">About</a></li>
       <li><a href="#services">Services</a></li>
-      <li><a href="#projects">Portfolio</a></li>
+      <li><a href="projects.html">Portfolio</a></li>
       <li><a href="#contact">Contact Me</a></li>
     </ul>
   </nav>
@@ -52,101 +52,16 @@
       <div class="service-grid">
         <div class="service-card" data-aos="zoom-in" data-aos-delay="100">
           <h3>Building Planning</h3>
-          <p>We create Vastu-compliant, space-efficient building plans tailored to your specific requirements and site conditions.</p>
         </div>
         <div class="service-card" data-aos="zoom-in" data-aos-delay="200">
           <h3>Elevation Design</h3>
-          <p>Our creative elevation designs enhance your building’s appearance with a focus on aesthetics, proportion, and client preferences.</p>
         </div>
         <div class="service-card" data-aos="zoom-in" data-aos-delay="300">
           <h3>Structural Detailing</h3>
-          <p>We provide precise structural drawings and reinforcements that ensure safety, durability, and compliance with engineering standards.</p>
         </div>
       </div>
     </div>
   </section>
-
-  <section class="projects" id="projects" data-aos="fade-up">
-    <h2>My Projects</h2>
-    <div class="project-grid">
-      <div class="project-card" data-aos="fade-up" data-aos-delay="100">
-        <img src="asssets/projects/project_001.jpg" alt="Project 1" />
-        <div class="info">
-             <h3>Project One</h3>
-          <p>A brief description of the first project goes here.</p>
-        </div>
-      </div>
-      <div class="project-card">
-        <img src="asssets/projects/project_008.jpg" alt="Project 2">
-        <div class="info">
-          <h3>Project Two</h3>
-          <p>This is a description of the second project.</p>
-        </div>
-      </div>
-      <div class="project-card">
-        <img src="asssets/projects/project_003.jpg" alt="Project 3">
-        <div class="info">
-          <h3>Project Three</h3>
-          <p>Details about the third project are shown here.</p>
-        </div>
-      </div>
-      <div class="project-card">
-        <img src="asssets/projects/project_004.jpg" alt="Project 3">
-        <div class="info">
-          <h3>Project four</h3>
-          <p>Details about the third project are shown here.</p>
-        </div>
-      </div>
-  
-
-      <div class="project-card">
-        <img src="asssets/projects/project_005.jpg" alt="Project 3">
-        <div class="info">
-          <h3>Project four</h3>
-          <p>Details about the third project are shown here.</p>
-        </div>
-      </div>
-  
-
-        <div class="project-card">
-        <img src="asssets/projects/project_006.jpg" alt="Project 3">
-        <div class="info">
-          <h3>Project four</h3>
-          <p>Details about the third project are shown here.</p>
-        </div>
-      </div>
-
-         <div class="project-card">
-        <img src="asssets/projects/project_007.jpg" alt="Project 3">
-        <div class="info">
-          <h3>Project four</h3>
-          <p>Details about the third project are shown here.</p>
-        </div>
-      </div>
-
-       <div class="project-card">
-        <img src="asssets/projects/project_007.jpg" alt="Project 3">
-        <div class="info">
-              <h3>Project four</h3>
-          <p>Details about the third project are shown here.</p>
-        </div>
-      </div>
-         <div class="project-card">
-        <img src="asssets/projects/project_002.jpg" alt="Project 3">
-        <div class="info">
-          <h3>Project four</h3>
-          <p>Details about the third project are shown here.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
-
-
-
-
 
 
   <section class="contact-section" id="contact" data-aos="fade-up">
