--- a/projects.html
+++ b/projects.html
@@ -1,130 +1,158 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Portfolio Gallery</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #fafafa;
-      color: #333;
-    }
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Local Gallery</title>
+<style>
+  :root{
+    --gap:12px;
+    --card-bg:#fff;
+    --muted:#666;
+    --accent:#0b84ff;
+    --bg:#0b0b0b;
+    --text:white;
+   --dark-charcoal: #111111;
+  --dark-jet: #1A1A1A;
+  --dark-raisin: #1E1E1E;
+  --dark-eerie: #1B1B1B;
+  --dark-onyx: #0F0F0F;
+  --dark-gunmetal: #121212;
+  --dark-outerspace: #2B2B2B;
 
-    header {
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
-      padding: 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .gallery-item {
-      background: #fff;
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
-    }
-
-    .gallery-item:hover {
-      transform: scale(1.03);
-    }
-
-    .gallery-item img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
+  --text-light: #eee; /* for contrast on dark backgrounds */ 
+  }
+  body{
+    margin:0;
+    font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+    background:#7b7b7b;
+    color:var(--text);
+    padding:20px;
+  }
 
 
 
+.gallery{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+}
 
+  .container{
+    max-width:1280px;
+    margin:0 auto;
+  }
 
+.gallery img {
+  width: 100px;
+  height: 100px;
+  margin: 5px;
+  object-fit: cover;
+  cursor: pointer;
+}
 
-
-    /* Modal overlay */
-.modal {
-  display: none;
+#overlay {
+  display: none;               /* hidden initially */
   position: fixed;
-  z-index: 1000;
-  inset: 0;                        /* shorthand for top:0;left:0;right:0;bottom:0 */
-  box-shadow: 0 8px 25px rgba(0,0,0,0.3);
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.7);
   justify-content: center;
   align-items: center;
+  z-index: 9999;
+  flex-direction: column;
+}
+
+#myCanvas {
+  display:none;
+  border: 2px solid #fff;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#closeBtn {
+  display:none;
+  margin-top: 20px;
+  font-size: 30px;
+  background: transparent;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
 
 
+  h1{ margin:0 0 16px; font-size:1.25rem; }
+  /* Responsive breakpoints */
+  @media (max-width:1200px){ .grid{ grid-template-columns: repeat(4, 1fr); } } /* 4 cols */
+  @media (max-width:900px){  .grid{ grid-template-columns: repeat(3, 1fr); } } /* 3 cols */
+  @media (max-width:600px){  .grid{ grid-template-columns: repeat(2, 1fr); } } /* 2 cols */
+  @media (max-width:420px){  .grid{ grid-template-columns: 1fr; } }              /* 1 col */
+
+  .media-card{
+    background:var(--card-bg);
+    border-radius:10px;
+    overflow:hidden;
+    box-shadow:0 1px 3px rgba(0,0,0,0.06);
+    display:flex;
+    flex-direction:column;
+    transition:transform .18s ease, box-shadow .18s ease;
+  }
+
+  .thumb-wrap{
+    width:100%;
+    aspect-ratio: 16/9;
+    background:#000;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    overflow:hidden;
+  }
+
+  .thumb-wrap img, .thumb-wrap video{
+    width:100%;
+    height:100%;
+    object-fit:contain;
+    display:block;
+  }
+
+  .caption{
+    background:transparent;
+    opacity:70%;
+    padding:15px 15px;
+    font-size:0.88rem;
+    color:black;
+    display:flex;
+    flex-direction:column;
+    gap:6px;
+    border: 2px solid black; /* 2px thick, solid line, blue color */
+  }
+
+  .card{
+  background:white;
+  padding: 10px 10px 10px 10px; /* top, right, bottom, left */
+  border:2px solid black;
+    }
 
 
-  
-
-/* Image */
-.modal img {
-  max-width: 55vw;    /* smaller size (60% of screen width) */
-  max-height: 55vh;   /* smaller size (60% of screen height) */
-  border-radius: 10px;
-  box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-  background: transparent; /* ✅ transparent background around image */
-  object-fit: contain;
-}
-/* Show state */
-.modal.show {
-  display: flex;
-  opacity: 1;
-}
-
-/* Modal image */
-.modal-content {
-  max-width: 80%;
-  max-height: 80%;
-  border-radius: 8px;
-  transform: scale(0.7);
-  transition: transform 0.8s ease; /* zoom-in effect */
-  opacity: 0;
-}
-
-/* When active */
-.modal.show .modal-content {
-  transform: scale(1);
-  opacity: 1;
-}
-
-
-
-  </style>
+</style>
 </head>
 <body>
-  <header>
-    <h1>My Portfolio</h1>
-    <p>A showcase of my work</p>
-  </header>
 
-  <main>
-    <div class="gallery" id="gallery">
-      <!-- Images will be inserted here dynamically using JS -->
+
+
+  <div class="gallery",id="gallery">
     </div>
 
-    <!-- Modal -->
-<div id="imageModal" class="modal">
-  <img id="modalImg" src="">
+<!-- Overlay container -->
+<div id="overlay">
+  <canvas id="myCanvas" width="600" height="400"></canvas>
+  <button id="closeBtn">&times;</button>
 </div>
 
-  </main>
-      <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
 
